# chat94-cli

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: release.yml
crates/chat4000/: Cargo.toml
crates/chat4000-crypto/: Cargo.toml
crates/chat4000-crypto/src/: lib.rs
crates/chat4000-crypto/tests/: crypto.rs
crates/chat4000-proto/: Cargo.toml
crates/chat4000-proto/src/: lib.rs
crates/chat4000-proto/tests/: protocol.rs
crates/chat4000-relay/: Cargo.toml
crates/chat4000-relay/src/: lib.rs
crates/chat4000/src/: main.rs  store.rs
crates/chat4000/src/transport/: mock.rs  mod.rs  relay.rs
crates/chat94-proto/src/: lib.rs
crates/chat94-proto/tests/: protocol.rs
crates/chat94-relay/src/: lib.rs
crates/chat94/src/: main.rs
docs/: color-options.html  product.md
scripts/: print-color-options.py
