[workspace]
members = [
    "crates/chat4000",
    "crates/chat4000-crypto",
    "crates/chat4000-proto",
    "crates/chat4000-relay",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "1.0.1"
license = "GPL-3.0-or-later"
authors = ["NeonNode Limited"]
homepage = "https://chat4000.com"
repository = "https://github.com/chat4000/chat4000-cli"

[workspace.dependencies]
anyhow = "1.0.100"
base64 = "0.22.1"
chacha20poly1305 = "0.10.1"
clap = { version = "4.5.50", features = ["derive"] }
crossterm = "0.29.0"
dirs = "6.0.0"
futures-util = "0.3.31"
hex = "0.4.3"
qrcode = "0.14.1"
rand = "0.9.2"
reedline = { version = "0.43.0", features = ["external_printer"] }
regex = "1.12.2"
rustls = { version = "0.23.38", features = ["ring"] }
semver = "1.0.27"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sentry = { version = "0.47.0", default-features = false, features = ["backtrace", "contexts", "panic", "ureq", "rustls"] }
sha2 = "0.10.9"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tokio-tungstenite = { version = "0.28.0", default-features = false, features = ["connect", "handshake", "rustls-tls-webpki-roots"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.20", features = ["fmt", "env-filter"] }
unicode-width = "0.2.0"
uuid = { version = "1.18.1", features = ["serde", "v4"] }
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
