[package]
name = "chat94-relay"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
chat94-crypto = { path = "../chat94-crypto" }
chat94-proto = { path = "../chat94-proto" }
futures-util.workspace = true
rustls.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
tracing.workspace = true
