[package]
name = "chat4000-relay"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
chat4000-crypto = { path = "../chat4000-crypto" }
chat4000-proto = { path = "../chat4000-proto" }
futures-util.workspace = true
rustls.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
tracing.workspace = true
