[package]
name = "chat94"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
clap.workspace = true
chat94-crypto = { path = "../chat94-crypto" }
chat94-proto = { path = "../chat94-proto" }
chat94-relay = { path = "../chat94-relay" }
crossterm.workspace = true
dirs.workspace = true
hex.workspace = true
qrcode.workspace = true
reedline.workspace = true
regex.workspace = true
rustls.workspace = true
semver.workspace = true
sentry.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
unicode-width.workspace = true
uuid.workspace = true
