[package]
name = "chat4000"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
clap.workspace = true
chat4000-crypto = { path = "../chat4000-crypto" }
chat4000-proto = { path = "../chat4000-proto" }
chat4000-relay = { path = "../chat4000-relay" }
crossterm.workspace = true
dirs.workspace = true
hex.workspace = true
qrcode.workspace = true
reedline.workspace = true
regex.workspace = true
rustls.workspace = true
semver.workspace = true
sentry.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
unicode-width.workspace = true
uuid.workspace = true
